vendored_parsers/tree-sitter-eex/test/corpus/comments.txt
================================================================================
Comments
================================================================================

I am some text!
<%# Look a comment! %>
I am more some text!

--------------------------------------------------------------------------------

(fragment
  (text)
  (comment)
  (text))

================================================================================
Old-style multi-line comments
================================================================================

<%# I
    AM
    A
    COMMENT
%>
and some text!

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))

================================================================================
New-style multi-line comments
================================================================================

<%!-- I
    AM
    A
    COMMENT
--%>
and some text!

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))

================================================================================
New-style multi-line comment containing a directive
================================================================================

<%!-- <%= if @x do %> --%>
and some text!

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))

================================================================================
Empty Comment
================================================================================

<%# %>

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))
